@@ -1,3 +1,7 @@
+2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/easy-mmode.el (define-minor-mode): Fix staging brain damage.
+
 2007-09-21  Kevin Ryde  <user42@zip.com.au>
 
 	* international/mule.el (sgml-html-meta-auto-coding-function):
